[tool.poetry]
name = "kanjigrid"
version = "0.0.4"
description = "Create Kanji Grids out of Text"
authors = ["exc4l <cps0537@gmail.com>"]
readme = "README.md"
repository = "https://github.com/exc4l/kanjigrid"
keywords = ["japanese", "kanji"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Japanese"
]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^8.1.2"

[tool.poetry.scripts]
greet = "kanjigrid.kanjigrid:greet"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
